# imap_thingy

./: .gitignore  README.md  accounts.json  requirements.txt  setup.cfg
custom_filters/: __init__.py
imap_thingy/: __init__.py  account.py  accounts.py  cli.py  config.py  imap_handler.py
imap_thingy/filters/: __init__.py  base_filter.py  basic_filters.py  criterion_filter.py  filter.py  filter_interfaces.py  interfaces.py  move_if_from.py  move_if_to.py
