[metadata]
name = email-tool
version = 0.1.0
description = A tool to automate email operations via IMAP
author = Ale
license = MIT

[options]
packages = find:
install_requires =
    imapclient
    pyzmail36
    python-dotenv

[options.entry_points]
console_scripts =
    email-tool = email_tool.cli:main
